# aerial_robot_demo

./: .gitignore  .travis.sh  README.md  travis.rosinstall
mbzirc2020/mbzirc2020_common/: CMakeLists.txt  package.xml  setup.py
mbzirc2020/mbzirc2020_common/config/: EgomotionEstimationSimulation.yaml  Servo.yaml  T265ModuleListTemplate.yaml
mbzirc2020/mbzirc2020_common/launch/: base_sensors.launch  bringup.launch  robot_model.launch
mbzirc2020/mbzirc2020_common/robots/: default.gazebo.xacro  default.urdf.xacro
mbzirc2020/mbzirc2020_common/scripts/: ground_plane_in_sensor_frame.py  sample_takeoff_gopos_transform.py
mbzirc2020/mbzirc2020_common/scripts/hydrus/: __init__.py  hydrus_interface.py
mbzirc2020/mbzirc2020_common/scripts/mbzirc2020_common/: __init__.py  gps_utils.py  hydrus_interface.py
mbzirc2020/mbzirc2020_common/urdf/: fixed_link.urdf.xacro
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1/: package.xml
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_tasks/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_tasks/config/: reactive_motion.yaml  task1.rviz  task1_ground_station.rviz  task1_land_state_machine.yaml  task1_ransac_vis.rviz  task1_state_machine.yaml  task1_state_machine_cpy.yaml
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_tasks/doc/: ball_annotation.md
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_tasks/launch/: challenge.launch  communication2ground_station.launch  detection_debug.launch  drone_ball_tracking_by_detection.launch  final_land.launch  ground_station.launch  motion.launch  ransac.launch  ransac_visualization.launch  ransac_visualization_w_model.launch  tracking.launch
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_tasks/msg/: FC2OCSData.msg  OCS2FCData.msg
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_tasks/script/: cog_quaternion_to_euler.py  cropped_image_from_annotated_tfrecord.py  fake_treasure_detector_from_gazebo.py  fake_visual_detector.py  gps_yaw_info.py  hydrus_commander.py  hydrus_navigation_states.py  hydrus_tracking_controller.py  install_detection_models.py  install_train_data.py  install_vision_test_data.py  reactive_motion_interface.py  task1_land_state_machine.py  task1_motion_state_machine.py  task1_special_landing.py  task_1_cheat.py  task_command_interface.py  task_commander.py
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_tasks/src/: LinearKalmanFilter.cpp  MotionSinglePrimitive.cpp  RansacLineFitting.cpp  ReactiveMotion.cpp  TrajectoryPredictor.cpp  TrajectoryTracker.cpp  drone_ball_tracking_detection.cpp  ransac_line_fitting_node.cpp  target_world_pose.cpp  trajectory_predictor_node.cpp  trajectory_tracker_node.cpp
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_vision/: .gitignore  CMakeLists.txt  README.md  package.xml
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_vision/doc/: ball_annotation.md
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_vision/launch/: drone_ball_tracking_by_detection.launch
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_vision/script/: cropped_image_from_annotated_tfrecord.py  install_detection_models.py  install_train_data.py  install_vision_test_data.py  tf_label_map.pbtxt
mbzirc2020/mbzirc2020_task1/mbzirc2020_task1_vision/src/: cascaded_deep_tracking_detection.cpp  (+1 more)
mbzirc2020/mbzirc2020_task2/mbzirc2020_task2_common/: CMakeLists.txt  package.xml  setup.py
mbzirc2020/mbzirc2020_task2/mbzirc2020_task2_tasks/: CMakeLists.txt  deep_save_image.py  package.xml
mbzirc2020/mbzirc2020_task3/mbzirc2020_task3/: package.xml
mbzirc2020/mbzirc2020_task3/mbzirc2020_task3_tasks/: CMakeLists.txt  package.xml
mbzirc2020_task1/mbzirc2020_task1_tasks/: CMakeLists.txt  package.xml
mbzirc2020_task1/mbzirc2020_task1_tasks/config/: task1.rviz
mbzirc2020_task1/mbzirc2020_task1_tasks/launch/: jsk_mbzirc_task_1.launch  task_1_tracking.launch
mbzirc2020_task1/mbzirc2020_task1_tasks/msg/: PrimitiveParams.msg
mbzirc2020_task1/mbzirc2020_task1_tasks/script/: fake_visual_detector.py  hydrus_tracking_controller.py  task_1_cheat.py  task_command_interface.py
mbzirc2020_task1/mbzirc2020_task1_tasks/src/: MotionSinglePrimitive.cpp  TrajectoryPredictor.cpp  TrajectoryTracker.cpp
mbzirc2020_task2/mbzirc2020_task2_common/: CMakeLists.txt  package.xml
mbzirc2020_task2/mbzirc2020_task2_common/launch/: bringup.launch  robot_model.launch
mbzirc2020_task2/mbzirc2020_task2_common/urdf/: common.xacro
mbzirc2020_task2/mbzirc2020_task2_simulation/: CMakeLists.txt  package.xml
mbzirc2020_task2/mbzirc2020_task2_simulation/src/: mbzirc2020_task2_rubble_plugin.cpp  mbzirc2020_task2_rubble_plugin.h
mbzirc2020_task2/mbzirc2020_task2_simulation/urdf/: gzplugin_grasp_fix.urdf.xacro
mbzirc2020_task3/mbzirc2020_task3_common/: CMakeLists.txt  package.xml
mbzirc2020_task3/mbzirc2020_task3_common/launch/: hydrus_bringup.launch
mbzirc2020_task3/mbzirc2020_task3_common/robots/: hydrus.gazebo.xacro  hydrus.urdf.xacro
mbzirc2020_task3/mbzirc2020_task3_motion/: CMakeLists.txt  package.xml
mbzirc2020_task3/mbzirc2020_task3_motion/config/: SheetProperty.yaml  reach_target_object.yaml  search_target_object.yaml
mbzirc2020_task3/mbzirc2020_task3_motion/launch/: find_ground_fire.launch  open_form_planner.launch  search_and_reach_single_color_object.launch
mbzirc2020_task3/mbzirc2020_task3_motion/script/: hydrus_commander.py  motion.py  task3_motion.py
mbzirc2020_task3/mbzirc2020_task3_motion/src/: open_form_planner.cpp  open_form_planner_node.cpp
mbzirc_2020/mbzirc_2020/: CHANGELOG.rst  CMakeLists.txt  package.xml
mbzirc_2020/mbzirc_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
mbzirc_2020/mbzirc_common/launch/: mbzirc_arena.launch  mbzirc_arena_1.launch
mbzirc_2020/mbzirc_common/src/: mbzirc_gazebo_panel_plugin.cpp  mbzirc_gazebo_treasure_plugin.cpp
mbzirc_2020/mbzirc_common/urdf/: hawk.urdf.xacro
mbzirc_2020/mbzirc_tasks/: CMakeLists.txt  package.xml
mbzirc_2020/mbzirc_tasks/config/: task1.rviz
mbzirc_2020/mbzirc_tasks/launch/: jsk_mbzirc_task_1.launch
mbzirc_2020/mbzirc_tasks/script/: task_1_cheat.py
(+517 files in other folders)
