<?xml version="1.0"?>
<package format="2">
  <name>mbzirc2020_task2_tasks</name>
  <version>0.0.0</version>
  <description>The mbzirc2020_task2_tasks package</description>

  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>smach_viewer</exec_depend>
  <depend>mbzirc2020_common</depend>
  <depend>mbzirc2020_task2_common</depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
