<?xml version="1.0"?>
<package format="2">
  <name>mbzirc2020_task3</name>
  <version>0.0.0</version>
  <description>
    The metapackage for mbzirc2020_task3 packages
  </description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>
  <maintainer email="nishio@jsk.imi.i.u-tokyo.ac.jp">Takuzumi Nishio</maintainer>
  <maintainer email="t-maki@jsk.imi.i.u-tokyo.ac.jp">Toshiya Maki</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mbzirc2020_task3_common</exec_depend>
  <exec_depend>mbzirc2020_task3_motion</exec_depend>
  <!-- <exec_depend>mbzirc2020_task3_simulation</exec_depend> -->

  <export>
    <metapackage/>
  </export>

</package>
